--- a/index.html
+++ b/index.html
@@ -351,19 +351,19 @@
         const database = getDatabase(app);
 
         const defaultQuickMessages = [
-            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "MEDICATION_IMAGE_URL" },
-            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "PILLS_IMAGE_URL" },
-            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "LUNCH_IMAGE_URL" },
-            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "DINNER_IMAGE_URL" },
-            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "BREAKFAST_IMAGE_URL" },
-            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "WATER_IMAGE_URL" },
-            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "EXERCISE_IMAGE_URL" },
-            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://imgur.com/a/kUY0UsK" },
-            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "DOG_IMAGE_URL" },
-            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "CALL_IMAGE_URL" },
-            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "DAUGHTER_IMAGE_URL" },
-            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "SON_IMAGE_URL" },
-            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "EMERGENCY_IMAGE_URL" }
+            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "https://i.imgur.com/qwDzgIg.png" },
+            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "https://i.imgur.com/qwDzgIg.png" },
+            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "https://i.imgur.com/3dQFUtf.png" },
+            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "https://i.imgur.com/3dQFUtf.png" },
+            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "https://i.imgur.com/3dQFUtf.png" },
+            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "https://i.imgur.com/7Qw9a5R.png" },
+            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "https://i.imgur.com/ZqD173c.png" },
+            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://i.imgur.com/fd8XplX.png" },
+            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://i.imgur.com/RijMqBi.png" },
+            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
+            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
+            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
+            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://i.imgur.com/kwIMwGv.png" }
         ];
 
         let audioContext;
