--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "https://i.imgur.com/3dQFUtf.png" },
             { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "https://i.imgur.com/7Qw9a5R.png" },
             { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "https://i.imgur.com/ZqD173c.png" },
-            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://i.imgur.com/fd8XplX.png" },
+            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" },
             { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://i.imgur.com/RijMqBi.png" },
             { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
             { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
