--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://i.imgur.com/RijMqBi.png" },
             { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
             { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
-            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
+            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
             { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://i.imgur.com/kwIMwGv.png" }
         ];
 
