--- a/index.html
+++ b/index.html
@@ -351,19 +351,19 @@
         const database = getDatabase(app);
 
         const defaultQuickMessages = [
-            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "https://i.imgur.com/qwDzgIg.png" },
-            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "https://i.imgur.com/qwDzgIg.png" },
-            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "https://i.imgur.com/3dQFUtf.png" },
-            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "https://i.imgur.com/3dQFUtf.png" },
-            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "https://i.imgur.com/3dQFUtf.png" },
-            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "https://i.imgur.com/7Qw9a5R.png" },
-            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "https://i.imgur.com/ZqD173c.png" },
-            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" },
-            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://i.imgur.com/RijMqBi.png" },
-            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
-            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://i.imgur.com/xGzrI77.png" },
+            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "gs://patient-monitor-ca78a.firebasestorage.app/8.png" },
+            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "gs://patient-monitor-ca78a.firebasestorage.app/8.png" },
+            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "gs://patient-monitor-ca78a.firebasestorage.app/4.png" },
+            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "gs://patient-monitor-ca78a.firebasestorage.app/4.png" },
+            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "gs://patient-monitor-ca78a.firebasestorage.app/4.png" },
+            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "gs://patient-monitor-ca78a.firebasestorage.app/TIME TO EAT.png" },
+            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "gs://patient-monitor-ca78a.firebasestorage.app/14.png" },
+            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "gs://patient-monitor-ca78a.firebasestorage.app/2.png" },
+            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "gs://patient-monitor-ca78a.firebasestorage.app/6.png" },
+            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
+            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
             { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
-            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://i.imgur.com/kwIMwGv.png" }
+            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "gs://patient-monitor-ca78a.firebasestorage.app/12.png" }
         ];
 
         let audioContext;
