--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
             { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
             { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "gs://patient-monitor-ca78a.firebasestorage.app/10.png" },
-            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "gs://patient-monitor-ca78a.firebasestorage.app/12.png" }
+            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/12.png?alt=media&token=7ce8b17f-34fc-447c-8ebd-16a5b4f497c0" }
         ];
 
         let audioContext;
