--- a/index.html
+++ b/index.html
@@ -351,20 +351,21 @@
         const database = getDatabase(app);
 
         const defaultQuickMessages = [
-            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "MEDICATION_IMAGE_URL" },
-            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "PILLS_IMAGE_URL" },
-            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "LUNCH_IMAGE_URL" },
-            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "DINNER_IMAGE_URL" },
-            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "BREAKFAST_IMAGE_URL" },
-            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "WATER_IMAGE_URL" },
-            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "EXERCISE_IMAGE_URL" },
-            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "BED_IMAGE_URL" },
-            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "DOG_IMAGE_URL" },
-            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "CALL_IMAGE_URL" },
-            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "DAUGHTER_IMAGE_URL" },
-            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "SON_IMAGE_URL" },
-            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "EMERGENCY_IMAGE_URL" }
+            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/8.png?alt=media&token=35b4dfe6-4822-4f3d-b8bb-a0293b88d578" },
+            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/8.png?alt=media&token=35b4dfe6-4822-4f3d-b8bb-a0293b88d578" },
+            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
+            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
+            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
+            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/TIME%20TO%20EAT.png?alt=media&token=f2f29632-a197-4b07-ab31-aaec1de3736e" },
+            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/14.png?alt=media&token=7595873a-5530-410a-82d8-1fb2402c9ffe" },
+            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/2.png?alt=media&token=2d0e637e-ebd2-489f-9924-9648c4850461" },
+            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/6.png?alt=media&token=9d309dc4-e089-44f7-9bdb-8a541cbae68a" },
+            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/12.png?alt=media&token=7ce8b17f-34fc-447c-8ebd-16a5b4f497c0" }
         ];
+
 
         let audioContext;
         let lastMessageText = '';
@@ -819,3 +820,4 @@
     </div>
 </body>
 </html>
+
