--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         category: "Reminders", 
                         text: "DYNAMIC_MORNING_LUCY", 
                         icon: "🌅", 
-                        image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/6.png?alt=media&token=9d309dc4-e089-44f7-9bdb-8a541cbae68a" 
+                        image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/IMG_3627.png?alt=media&token=a7f43b85-87b9-4a10-bbc5-facde4415c5c" 
                     });
                 }
                 
@@ -723,7 +723,7 @@
                         category: "Communication", 
                         text: "DYNAMIC_JESS_WORK", 
                         icon: "💼", 
-                        image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" 
+                        image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/IMG_3628.png?alt=media&token=3f18741c-7646-4704-846b-25b61e8659e7" 
                     });
                 }
                 
@@ -1126,4 +1126,5 @@
     </div>
 </body>
 </html>
+
 
