--- a/index.html
+++ b/index.html
@@ -478,20 +478,24 @@
         let audioContext;
 
         const defaultQuickMessages = [
-            { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/8.png?alt=media&token=35b4dfe6-4822-4f3d-b8bb-a0293b88d578" },
-            { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/8.png?alt=media&token=35b4dfe6-4822-4f3d-b8bb-a0293b88d578" },
-            { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
-            { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
-            { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
-            { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/TIME%20TO%20EAT.png?alt=media&token=f2f29632-a197-4b07-ab31-aaec1de3736e" },
-            { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/14.png?alt=media&token=7595873a-5530-410a-82d8-1fb2402c9ffe" },
-            { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/2.png?alt=media&token=2d0e637e-ebd2-489f-9924-9648c4850461" },
-            { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/6.png?alt=media&token=9d309dc4-e089-44f7-9bdb-8a541cbae68a" },
-            { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
-            { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
-            { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
-            { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/12.png?alt=media&token=7ce8b17f-34fc-447c-8ebd-16a5b4f497c0" }
-        ];
+    { category: "Medication", text: "TIME FOR MEDICATION", icon: "💊", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/8.png?alt=media&token=35b4dfe6-4822-4f3d-b8bb-a0293b88d578" },
+    { category: "Medication", text: "TAKE YOUR PILLS", icon: "💊", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/8.png?alt=media&token=35b4dfe6-4822-4f3d-b8bb-a0293b88d578" },
+    { category: "Meals", text: "TIME FOR LUNCH", icon: "🍽️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
+    { category: "Meals", text: "TIME FOR DINNER", icon: "🍽️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
+    { category: "Meals", text: "TIME FOR BREAKFAST", icon: "☕", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/4.png?alt=media&token=2a1debc8-a636-486d-803a-ab94a70fe7ef" },
+    { category: "Reminders", text: "DRINK WATER", icon: "💧", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/TIME%20TO%20EAT.png?alt=media&token=f2f29632-a197-4b07-ab31-aaec1de3736e" },
+    { category: "Reminders", text: "TIME FOR EXERCISE", icon: "🚶", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/14.png?alt=media&token=7595873a-5530-410a-82d8-1fb2402c9ffe" },
+    { category: "Reminders", text: "TIME FOR BED", icon: "🛏️", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/2.png?alt=media&token=2d0e637e-ebd2-489f-9924-9648c4850461" },
+    { category: "Reminders", text: "LET THE DOG OUT", icon: "🐕", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/6.png?alt=media&token=9d309dc4-e089-44f7-9bdb-8a541cbae68a" },
+    { category: "Reminders", text: "DYNAMIC_MORNING_LUCY", icon: "🌅", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/6.png?alt=media&token=9d309dc4-e089-44f7-9bdb-8a541cbae68a" },
+    { category: "Communication", text: "PLEASE CALL ME", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+    { category: "Communication", text: "CALL YOUR DAUGHTER", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+    { category: "Communication", text: "CALL YOUR SON", icon: "📞", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+    { category: "Communication", text: "DYNAMIC_JESS_WORK", icon: "💼", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/10.png?alt=media&token=3dbb82ba-eb6b-499f-9011-5ec722e797e1" },
+    { category: "Emergency", text: "EMERGENCY - CALL 911", icon: "🚨", image: "https://firebasestorage.googleapis.com/v0/b/patient-monitor-ca78a.firebasestorage.app/o/12.png?alt=media&token=7ce8b17f-34fc-447c-8ebd-16a5b4f497c0" },
+    { category: "Image Only", text: "IMAGE_ONLY_1", icon: "🖼️", image: "FULLSCREEN_IMAGE_URL_1" },
+    { category: "Image Only", text: "IMAGE_ONLY_2", icon: "🖼️", image: "FULLSCREEN_IMAGE_URL_2" }
+];
 
         function getDynamicMessage(messageKey) {
             const now = new Date();
@@ -1126,5 +1130,6 @@
     </div>
 </body>
 </html>
+
 
 
