--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             background-position: center;
             background-repeat: no-repeat;
             /* If no image, this color shows */
-            background-color: #2c3e50;
+            background-color: #35063e;
         }
         
         #modeSelection {
@@ -1130,5 +1130,6 @@
     </div>
 </body>
 </html>
+
 
 
