--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #35063e 0%, #1a0129 100%);
             min-height: 100vh;
         }
         
@@ -1130,6 +1130,7 @@
     </div>
 </body>
 </html>
+
 
 
 
